[package]
name = "twip-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_cors = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
postgres = "0.19.2"
hex = "0.4.3"
sha2 = "0.9.8"
rocket-basicauth = "1"
rand = "0.8.4"
base64 = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default_features = false
features = ["json"] 

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default_features = false
features = ["postgres_pool"]
